[package]
name = "lmdb-mintlayer"
version = "0.16.1"
license = "Apache-2.0"
edition = "2021"
description = "Idiomatic and safe LMDB wrapper."
homepage = "https://github.com/mozilla/lmdb-rs-mintlayer"
repository = "https://github.com/mozilla/lmdb-rs-mintlayer.git"
readme = "README.md"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

exclude = [
  # Exclude CI config files from package.
  "/.appveyor.yml",
  "/.travis.yml",
  "/azure-pipelines-template.yml",
  "/azure-pipelines.yml",
]

[lib]
name = "lmdb"

[workspace]
members = [
  "lmdb-sys",
]

[dependencies]
bitflags = "1"
byteorder = "1"
libc = "0.2"
fs4 = { version = "0.6", features = ["sync"] }
num = "0.4"

# In order to ensure that we test lmdb-rkv in CI against the in-tree version
# of lmdb-rkv-sys, we specify the dependency as a path here.
#
# But we can't publish the lmdb-rkv crate to crates.io with a path dependency,
# so we have to temporarily change this to point to the current version
# of lmdb-rkv-sys on crates.io when publishing lmdb-rkv to that crate registry.
#
# (See "Publishing to crates.io" in README.md for more information.)
lmdb-rkv-sys = { path = "./lmdb-sys" }

[dev-dependencies]
rand = "0.8"
tempdir = "0.3"
page_size = "0.5"

[features]
default = []
with-asan = ["lmdb-rkv-sys/with-asan"]
with-tsan = ["lmdb-rkv-sys/with-tsan"]
with-fuzzer = ["lmdb-rkv-sys/with-fuzzer"]
with-fuzzer-no-link = ["lmdb-rkv-sys/with-fuzzer-no-link"]
